<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">



    <TextView
        android:id="@+id/tvCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main__cadastrarProfissional"
        android:layout_marginTop="45dp"
        android:textSize="36sp"
        android:fontFamily="@font/avenirbold"
        android:textColor="@color/azulescuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/main__nomeCompleto"
        android:fontFamily="@font/avenir"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCadastro"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@drawable/textbox"
        android:drawableStart="@drawable/name"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNome"/>

    <TextView
        android:id="@+id/tvTelef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/main__telefone"
        android:fontFamily="@font/avenir"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTelef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@drawable/textbox"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTelef"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/main__email"
        android:fontFamily="@font/avenir"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelef"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@drawable/textbox"
        android:drawableStart="@drawable/email"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"/>

    <TextView
        android:id="@+id/tvSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/main__senha"
        android:fontFamily="@font/avenir"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@drawable/textbox"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSenha"/>

    <TextView
        android:id="@+id/tvEnd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/main__endereco1"
        android:fontFamily="@font/avenir"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenha"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEnd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@drawable/textbox"
        android:drawableStart="@drawable/place"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnd1"/>

    <TextView
        android:id="@+id/tvEnd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/main__endereco2"
        android:fontFamily="@font/avenir"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEnd1"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEnd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@drawable/textbox"
        android:drawableStart="@drawable/place"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnd2"/>

    <TextView
        android:id="@+id/tvEnd3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/main__endereco3"
        android:fontFamily="@font/avenir"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEnd2"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEnd3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@drawable/textbox"
        android:drawableStart="@drawable/place"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnd3"/>

        <TextView
            android:id="@+id/tvCurriculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:text="Curriculo"
            android:fontFamily="@font/avenir"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEnd3"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCurriculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:background="@drawable/textbox"
            android:drawableStart="@drawable/curriculo"
            android:drawablePadding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCurriculo"/>

        <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnProximo"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        app:layout_constraintTop_toBottomOf="@+id/etCurriculo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/main__proximo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/box"
        app:layout_constraintTop_toBottomOf="@id/btnProximo"
        app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVoltarL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:background="#00018786"
            android:text="@string/voltar"
            android:fontFamily="@font/avenirbold"
            android:textColor="@color/azulclaro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>